--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,8 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Give execute permission to mvnw
+        run: chmod +x mvnw
 
       - name: Build JAR with Maven
         run: ./mvnw clean package -DskipTests
