--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -29,11 +29,16 @@ spec:
                   key: POSTGRES_PASSWORD
           readinessProbe:
             httpGet:
-              path: /pingpong
+              path: /healthz
               port: 8082
             initialDelaySeconds: 10
             periodSeconds: 5
-            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8082
+            initialDelaySeconds: 20
+            periodSeconds: 5
           resources:
             requests:
               cpu: 150m
